# hinton-projects

./: README.md  memory-system-guide.md  nvlink_bandwidth_sim.py  sim_results.json
20260327_PTOGBA/: CMakeLists.txt  README.md
20260327_PTOGBA/include/: arbiter.h  scenario_gen.h  sim_config.h  types.h
20260327_PTOGBA/src/: arbiter.cpp  latency_model.cpp  main.cpp  scenario_gen.cpp
20260327_PTOGBA_V2/: CMakeLists.txt  README.md
20260327_PTOGBA_V2/include/: arbiter.h  scenario_gen.h  sim_config.h  stats.h
20260327_PTOGBA_V2/src/: arbiter.cpp  main.cpp  scenario_gen.cpp  stats.cpp
20260328_CatTeamSharing/: hinton_material.md  hinton_material_v2.md  slide5_独立工作流.md  slide8_协作流.md
20260328_PTOGBA_V3/: CMakeLists.txt
20260328_PTOGBA_V3/include/: arbiter.h  latency_model.h  scenario_gen.h  sim_config.h  sim_config_v2.h  stats.h  types.h
20260328_PTOGBA_V3/src/: arbiter.cpp  main.cpp  scenario_gen.cpp  stats.cpp
20260328_TEAM_SHARE/: hinton_material.md
20260330_HelloWorldDemo/: spec.md  test_vector.py  vector.py
20260330_PTOGBA_V4/: CMakeLists.txt  README.md
20260330_PTOGBA_V4/include/: latency_model.h  sim_config.h  stimulus_gen.h  types.h
20260330_PTOGBA_V4/src/: e2e_benchmark.cpp  latency_model.cpp  main.cpp  stimulus_gen.cpp
20260331_PTOGBA_V5/: CMakeLists.txt
20260331_PTOGBA_V5.1/: CMakeLists.txt  架构问题.md  编码错误已解决.md  编码错误报告.md  编码问题.md
20260331_PTOGBA_V5.1/include/: sim_config.h  types.h
20260331_PTOGBA_V5.1/src/: top.cpp
20260331_PTOGBA_V5/include/: arbiter.h  gba_engine.h  host_nic.h  mc_engine.h  sim_config.h  stimulus_gen.h  switch_port.h  system_monitor.h  types.h
20260331_PTOGBA_V5/src/: main.cpp  main_simple.cpp  main_v5.cpp
20260402_Demo_KVCache/: paged_attention_sim.py
20260402_Demo_LLM_Infer/: lru_cache.py
20260402_VibeCoding_NVLink_BW/: nvlink_bandwidth_sim.py
sc-arbiter/: .gitignore  CMakeLists.txt  README.md  rr_arbiter.h  tb.cpp
sc-event-scheduler/: CMakeLists.txt  README.md  event.h  event_scheduler.h  top.cpp
sc-fifo/: CMakeLists.txt  README.md  my_fifo.h  tb.cpp
tlm-traffic-gen/: CMakeLists.txt  README.md  monitor.h  packet.h  top.cpp  traffic_generator.h
